# Codox

./: .gitignore  CLAUDE.md  README.md  capacitor.config.ts  handoff_plan.md  index.html  package-lock.json  package.json  playwright.config.ts  pwa-assets.config.ts  review_plan.md  tsconfig.test.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
Docs/: ANSWER_LAYOUTS.md  BUILD_PLAN.md  CODOX_CONTEXT.md  CODOX_MIGRATION.md  ONE_SCREEN_PORT_HANDOFF.md  ONE_SCREEN_PORT_PLAN.md  PHASE3_DESIGN_DECISIONS.md  PHASE4_PLAN.md  PHASE5_PLAN.md  PHASE6_PLAN.md  PLANNER_TEST_MIGRATION_TODO.md  RELEASING.md  TECHSTACK_RESEARCH.md  UI_BEHAVIOUR_GUIDE.md
agent-conversion/: AGENTS.md  CLAUDE.md  FORMAT.md  QUALITY.md  README.md
android/: settings.gradle
design-system/: DESIGN_AUDIT.md  DESIGN_SYSTEM.md  ERROR_LANGUAGE.md  IMPLEMENTATION_PLAN.md  PHASE3_DESIGN_DECISIONS.md  README.md  TRIVIADOX_PALETTE.md  one-screen-layout.html
e2e/: critical-journeys.spec.ts
scripts/: agent-crop.mjs  agent-prepare.mjs  agent-validate.mjs  bench-jpeg-options.mjs  cli-convert.mjs  drive-agent-import.mjs  drive-customizations.mjs  drive-encoder-bench.mjs  drive-folders.mjs  drive-fresh-on-reload.mjs  drive-index-pages.mjs  drive-matching-mode.mjs  drive-phase5.mjs  drive-phase6.mjs  drive-phase7.mjs  drive-phase9.mjs  drive-quota-and-box.mjs  drive-review-edit.mjs  drive-safe-area.mjs  drive-save-picker.mjs  drive-topics-reparent.mjs  render-pdf-pages.mjs  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+224 files in other folders)
