[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2.11.3", features = [] }
# Opens external URLs (Triviadox import, the AI Studio key page) in the
# user's real browser — the WebView2 shell ignores window.open / _blank.
tauri-plugin-opener = "2"

# Desktop-only: in-app auto-update from GitHub Releases + relaunch.
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
